--- a/src/components/movies/style.scss
+++ b/src/components/movies/style.scss
@@ -1,6 +1,6 @@
 .Movies {
-    width: 30vw;
-    height: 80vh;
+    width: 500px;
+    height: 100%;
 
     background: rgba(255, 255, 255, 0.1);
     box-shadow: inset -2px -2px 2px rgba(48, 41, 47, 0.25), inset 2px 2px 2px rgba(255, 255, 255, 0.1);
