--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,11 @@
 }
 
 .App {
-  background-color: #151218;
+  background-image: url('./assets/back.png');
+  background-size: cover;
   height: 100vh;
   width: 100vw;
-}
-
-.container {
-  padding: 5vw 10vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
