--- a/src/components/dashboard/style.scss
+++ b/src/components/dashboard/style.scss
@@ -3,9 +3,16 @@
     src: url('./../../assets/Montserrat-Light.ttf') format('truetype');
 }
 
+
+tspan {
+    fill: #FFFFFF !important;
+    font-size: 10px !important;
+}
+
 .Dashboard {
-    width: 30vw;
-    height: 35vh;
+    width: 450px;
+    height: 245px;
+    margin-left: 10px;
 
     background: rgba(255, 255, 255, 0.1);
     box-shadow: inset -2px -2px 2px rgba(48, 41, 47, 0.25), inset 2px 2px 2px rgba(255, 255, 255, 0.1);
@@ -17,7 +24,21 @@
         margin: 0 10px;
 
         .card-data {
-            width: 50%;
+            margin-top: -40px;
+            height: 200px;
+
+            p {
+                cursor: pointer;
+                color: #FFFFFF;
+                font-family: 'Montserrat Light', sans-serif;
+                font-weight: 100;
+                text-align: center;
+                font-size: 12px;
+            }
+        }
+
+        .VictoryContainer {
+            width: fit-content
         }
 
         .card-content {
