--- a/src/components/details/style.scss
+++ b/src/components/details/style.scss
@@ -34,6 +34,10 @@
                 font-size: 12px;
             }
 
+            .button {
+                cursor: pointer;
+            }
+
             span {
                 padding-right: 2px;
             }
