feat: mobile availability

--- a/src/components/dashboard/style.scss
+++ b/src/components/dashboard/style.scss
@@ -16,7 +16,6 @@ tspan {
 
     background: rgba(255, 255, 255, 0.1);
     box-shadow: inset -2px -2px 2px rgba(48, 41, 47, 0.25), inset 2px 2px 2px rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(50px);
     border-radius: 10px;
 
     .card-body {
@@ -64,5 +63,14 @@ tspan {
                 margin-right: 5px;
             }
         }
+    }
+}
+
+
+
+@media screen and (max-width: 600px) {
+    .Dashboard {
+        width: 350px;
+        margin: 20px auto;
     }
 }
