--- a/src/components/details/style.scss
+++ b/src/components/details/style.scss
@@ -10,7 +10,6 @@
 
     background: rgba(255, 255, 255, 0.1);
     box-shadow: inset -2px -2px 2px rgba(48, 41, 47, 0.25), inset 2px 2px 2px rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(50px);
     border-radius: 10px;
 
     .card-body {
@@ -52,5 +51,14 @@
             height: 25vh;
         }
 
+    }
+}
+
+
+
+@media screen and (max-width: 600px) {
+    .Details {
+        width: 350px;
+        margin: 20px auto 0 auto;
     }
 }
