--- a/src/App.scss
+++ b/src/App.scss
@@ -3,11 +3,20 @@
 }
 
 .App {
-  background-image: url('./assets/back.png');
+  //background-image: url('./assets/back.png');
+  background: #000000;
   background-size: cover;
   height: 100vh;
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+
+
+@media screen and (max-width: 600px) {
+  .App {
+      height: max-content;
+  }
 }
