--- a/src/components/panel/style.scss
+++ b/src/components/panel/style.scss
@@ -2,3 +2,10 @@
     display: flex;
     height: 500px;
 }
+
+@media screen and (max-width: 600px) {
+    .Panel {
+        height: 100%;
+        display: inline;
+    }
+}
