--- a/src/App.scss
+++ b/src/App.scss
@@ -3,8 +3,7 @@
 }
 
 .App {
-  //background-image: url('./assets/back.png');
-  background: #000000;
+  background-image: url('./assets/back.png');
   background-size: cover;
   height: 100vh;
   width: 100vw;
@@ -18,5 +17,6 @@
 @media screen and (max-width: 600px) {
   .App {
       height: max-content;
+      background-image: url('./assets/back-mobile.png');
   }
 }
